Make stroom-util a module